--- a/index.html
+++ b/index.html
@@ -76,18 +76,8 @@
   <!-- <script src="static/js/data.js"></script>
   <script src="static/js/app.js"></script> -->
   <script src="data.js"></script>
-  <script src="app.js"></script> -->
+  <script src="app.js"></script> 
 </body>
 
 </html>
 
-<!-- 
-var data = [{
-  datetime: "1/1/2010",
-  city: "benton",
-  state: "ar",
-  country: "us",
-  shape: "circle",
-  durationMinutes: "5 mins.",
-  comments: "4 bright green circles high in the sky going in circles then one bright green light at my front door."
-}, -->
