--- a/index.html
+++ b/index.html
@@ -38,13 +38,12 @@
                   <div class="form-group">
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
-                        <label for="date">Enter a Date</label>
-                        <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
+                        <label for="date">Enter Data</label>
+                        <input class="form-control" id="datetime" type="text" placeholder="Enter Data">
                       </li>
 
-
                       <li class="filter list-group-item">
-                        <label for="date">Select from Pulldown</label>
+                        <label for="date">Select Category</label>
 
                         <select id="selDataset">
                           <option value="datetime">DateTime</option>
@@ -53,6 +52,7 @@
                           <option value="country">Country</option>
                           <option value="shape">Shape</option>
                         </select>
+                      </li>
                       
                     </ul>
                   </div>
